[gd_scene load_steps=7 format=3 uid="uid://cbu137n5idbij"]

[ext_resource type="Script" path="res://SaveMenu/SaveMenu.gd" id="1_pffo3"]
[ext_resource type="Texture2D" uid="uid://pebqa3f2by7w" path="res://SaveMenu/assets/saveslotmenubackground.png" id="2_c5k41"]
[ext_resource type="Texture2D" uid="uid://dpxw6omkpxdjq" path="res://SaveMenu/assets/header.png" id="3_bqaqe"]
[ext_resource type="PackedScene" uid="uid://ddnlrb63k22yr" path="res://SaveMenu/SaveSlot/SaveSlot.tscn" id="4_hus4y"]
[ext_resource type="AudioStream" uid="uid://d0m8grhuo6nq1" path="res://SFX/addsaveslotnoise.mp3" id="5_u2m5s"]
[ext_resource type="AudioStream" uid="uid://cc70302gibsel" path="res://SFX/saveslotclicknoise.mp3" id="6_rlwof"]

[node name="SaveMenu" type="Node2D"]
script = ExtResource("1_pffo3")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(240, 135)
texture = ExtResource("2_c5k41")

[node name="Header" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(168, 46)
texture = ExtResource("3_bqaqe")
centered = false

[node name="SaveSlots" type="Node2D" parent="."]
position = Vector2(240, 135)

[node name="SaveSlot" parent="SaveSlots" instance=ExtResource("4_hus4y")]
position = Vector2(-108, -35)

[node name="SaveSlot2" parent="SaveSlots" instance=ExtResource("4_hus4y")]
position = Vector2(-37, -35)

[node name="SaveSlot3" parent="SaveSlots" instance=ExtResource("4_hus4y")]
position = Vector2(36, -35)

[node name="SaveSlot4" parent="SaveSlots" instance=ExtResource("4_hus4y")]
position = Vector2(108, -35)

[node name="SaveSlot5" parent="SaveSlots" instance=ExtResource("4_hus4y")]
position = Vector2(-108, 34)

[node name="SaveSlot6" parent="SaveSlots" instance=ExtResource("4_hus4y")]
position = Vector2(-36, 34)

[node name="SaveSlot7" parent="SaveSlots" instance=ExtResource("4_hus4y")]
position = Vector2(36, 34)

[node name="SaveSlot8" parent="SaveSlots" instance=ExtResource("4_hus4y")]
position = Vector2(108, 34)

[node name="AddSaveSlotNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_u2m5s")

[node name="SaveSlotClickNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_rlwof")
